Fixed spacing on What's Included Section

--- a/src/Assets/scss/components/sections/whats_included.scss
+++ b/src/Assets/scss/components/sections/whats_included.scss
@@ -29,7 +29,7 @@
         padding: 0 10px;
       }
       &:nth-child(1){
-        margin-top: 50px;
+        margin-top: 40px;
         margin-bottom: 70px;
         @media(max-width: $phone-landscape){
           margin-top: 0px;
@@ -37,7 +37,7 @@
         }
       }
       &:nth-child(2){
-        margin-bottom: 100px;
+        margin-bottom: 120px;
         @media(max-width: $phone-landscape){
           margin-bottom: 60px;
         }
